# rib

./: .env  Cargo.toml
cs/690261275410038804/: ala.json  ola.json
data/wfrp/: cs_pl.handlebars
src/: main.rs
src/bot/: db.rs  handler.rs
src/commands/: d10.rs  d100.rs  help.rs  meta.rs  mod.rs  whcs.rs
src/common/: assets.rs  dir.rs  discord.rs  error.rs  mod.rs
src/rpg/: mod.rs  wfrp.rs
src/slash/: png.rs  roll.rs
