[package]
name = "rib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = [
    "framework",
    "standard_framework",
] }
tokio = { version = "1.25.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rusqlite = { version = "0.28.0", features = ["bundled"] }
caith = "4.2.3"
rust-embed = "6.4.2"
uuid = { version="1.3.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
lopdf = "0.29.0"
pdf_form = "0.4.0"
prettytable-rs = "0.10.0"
